# Akumuli

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cmake  doxygen.ini  format.sh  prerequisites-osx.sh  prerequisites.sh  query_processor.cpp  query_processor.h  roundtrip.sh
CI/: before_install.sh  (+25 more)
akumulid/: CMakeLists.txt  binaryprotocol.cpp  binaryprotocol.h  chainrepl_messages.cpp  chainrepl_messages.h  expected.h  httpserver.cpp  httpserver.h  ingestion_pipeline.cpp  ingestion_pipeline.h  logger.cpp  logger.h  main.cpp  protocol_consumer.h  protocolparser.cpp  protocolparser.h  query_cursor.cpp  query_cursor.h  query_results_pooler.cpp  query_results_pooler.h  resp.cpp  resp.h  server.h  signal_handler.cpp  signal_handler.h  signals.cpp  signals.h  storage_api.cpp  storage_api.h  stream.cpp  stream.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h  utility.h
functests/: CMakeLists.txt  afl_compression.cpp  akumulid_test_tools.py  generate.py  loadgen.cpp  roundtrip.sh  runci_osx.sh  storage_test.cpp  test_concurrency.py  test_continuous_queries.py  test_data_ingestion.py  test_data_ingestion_bulk.py  test_database_overflow.py  test_empty_tree_restart.py  test_eval.py  test_events.py  test_filter_query.py  test_group_aggreagate.py  test_group_aggregate_join.py  test_high_cardinality.py  test_incomplete_write.py  test_ingestion_errors.py  test_join_query.py  test_kill.py  test_no_wal_recovery.py  test_query_language.py  test_recovery.py  test_restart.py  test_sax.py  test_search_api.py  test_volume_overflow.py  test_wal_parallel.py  test_wal_recovery.py
functests/ingestion_test/: CMakeLists.txt  main.cpp
functests/manual_testing_tools/: send_sample_with_no_tags.py
functests/parallel_test/: main.cpp
functests/sequencer_test/: CMakeLists.txt
fuzzers/: CMakeLists.txt  afl_compression.cpp  afl_compression_interop.cpp  afl_compression_iovec.cpp  afl_nbtree.cpp  afl_resp_parser.cpp  afl_series_name_parser.cpp  afl_timestamp_parser.cpp
libakumuli/: CMakeLists.txt  README.md  akumuli.cpp  akumuli2.cpp  anomalydetector.cpp  anomalydetector.h  bit_twiddling.cpp  bit_twiddling.h  buffer_cache.cpp  buffer_cache.h  compression.cpp  compression.h  crc32c.cpp  crc32c.h  cursor.cpp  cursor.h  datetime.cpp  datetime.h  external_cursor.h  fcntl_compat.h  hashfnfamily.cpp  hashfnfamily.h  internal_cursor.h  invertedindex.cpp  invertedindex.h  log_iface.cpp  log_iface.h  logger.cpp  logger.h  metadatastorage.cpp  metadatastorage.h  page.cpp  page.h  queryprocessor.cpp  queryprocessor.h  queryprocessor_framework.cpp  queryprocessor_framework.h  queryprocessor_fwd.h  saxencoder.cpp  saxencoder.h  (+19 more)
libakumuli/cmake/: FindAPR.cmake
libakumuli/include/: akumuli.h  akumuli_config.h  akumuli_def.h
libakumuli/index/: invertedindex.cpp  invertedindex.h  seriesparser.cpp  seriesparser.h  stringpool.cpp  stringpool.h
libakumuli/ingestion_engine/: ingestion_engine.cpp  ingestion_engine.h
libakumuli/query_processing/: absolute.cpp  absolute.h  anomaly.cpp  anomaly.h  eval.cpp  eval.h  exprtk.hpp  filterbyid.cpp  filterbyid.h  limiter.cpp  limiter.h  math.cpp  math.h  paa.cpp  paa.h  queryparser.cpp  queryparser.h  queryplan.cpp  queryplan.h  randomsamplingnode.cpp  randomsamplingnode.h  rate.cpp  rate.h  sax.cpp  sax.h  scale.cpp  scale.h  sliding_window.cpp  sliding_window.h  spacesaver.cpp  spacesaver.h  sum.cpp  sum.h  top.cpp  top.h
libakumuli/roaring/: roaring.c  roaring.hh
libakumuli/src/: CMakeLists.txt  akumuli.cpp  compression.cpp  cursor.cpp  datetime.cpp  internal_cursor.h  page.h  perf_seriesmatcher.cpp  queryprocessor.cpp  queryprocessor.h  sequencer.h  seriesparser.cpp  seriesparser.h  storage.cpp  storage.h  stringpool.h  test_mmap.cpp  test_parser.cpp  test_queryprocessor.cpp  test_storage.cpp  util.cpp  util.h
libakumuli/storage_engine/: blockstore.cpp  blockstore.h  column_store.cpp  column_store.h  compression.cpp  compression.h  file_util.cpp  file_util.h  ingestion_engine.cpp  ingestion_engine.h  input_log.cpp  input_log.h  lz4.c  lz4.h  nbtree.cpp  nbtree.h  nbtree_def.h  nbtree_iter.cpp  nbtree_iter.h  ref_store.cpp  ref_store.h  roaring.h  stable_storage.cpp  stable_storage.h  tree_registry.cpp  tree_registry.h  tuples.h  volume.cpp  volume.h  wal.cpp  wal.h
libakumuli/tool/: CMakeLists.txt  main.cpp
perftests/: CMakeLists.txt  perf_blockstore.cpp  perf_compression.cpp  perf_compression_events.cpp  perf_compression_throughput.cpp  perf_datetime_parsing.cpp  perf_ingestion.cpp  perf_invertedindex.cpp  perf_iovec.cpp  perf_nbtree.cpp  perf_parallel_ingestion.cpp  perf_pipeline.cpp  perf_respstream.cpp  perf_sequencer.cpp  perf_seriesmatcher.cpp  perf_tcp_server.cpp  perftest_tools.cpp  perftest_tools.h
src/: CMakeLists.txt  akumuli.cpp  buffer_manager.cpp  cache.cpp  compression.cpp  compression.h  counters.cpp  cursor.cpp  cursor.h  expected.h  graphite_client.cpp  graphite_client.h  ingestion_pipeline.cpp  ingestion_pipeline.h  internal_cursor.cpp  internal_cursor.h  logger.cpp  logger.h  main.cpp  page.cpp  page.h  page_manager.cpp  perf_pipeline.cpp  perf_respstream.cpp  perf_tcp_server.cpp  protocol_consumer.h  protocolparser.cpp  protocolparser.h  recorder.cpp  resp.cpp  resp.h  search.h  sequencer.cpp  sequencer.h  storage.cpp  storage.h  storage_manager.cpp  stream.cpp  stream.h  tcp_server.cpp  (+14 more)
unit_tests/: CMakeLists.txt  test_cache.cpp  test_compression.cpp  test_cursor.cpp  test_mmap.cpp  test_page.cpp  test_sequencer.cpp  test_sorting.cpp
unittests/: CMakeLists.txt  test_blockstore.cpp  test_column_store.cpp  test_compression.cpp  test_cursor.cpp  test_datetime.cpp  test_eval.cpp  test_ingestion.cpp  test_input_log.cpp  test_invertedindex.cpp  test_mmap.cpp  test_nbtree.cpp  test_page.cpp  test_parser.cpp  test_pipeline.cpp  test_protocolparser.cpp  test_querycursor.cpp  test_queryprocessor.cpp  test_ref_store.cpp  test_respstream.cpp  test_sax.cpp  test_sequencer.cpp  test_storage.cpp  test_stream.cpp  test_tcp_server.cpp  test_util.cpp
(+73 files in other folders)
